Add Chpater & !!! AUTO SLIDEUP and SLIDEDOWN Function
$(this).next('div.panel').slideToggle('slow');

if($(this).next('div.panel').attr('style')==="display: none;"){
$('.panel').slideUp('slow');
$(this).next('div.panel').slideDown('slow');
}else{
$(this).next('div.panel').slideUp('slow');
}

--- a/simple-editor-jq/simple-player-editor-jq.css
+++ b/simple-editor-jq/simple-player-editor-jq.css
@@ -16,3 +16,9 @@
     border: solid 1px #c3c3c3;
     border-top: none;
 }
+
+.chapter{
+	margin: 10px;
+	padding: 5px;
+    background-color: #F0E68C;
+}
