--- a/start-process/start-process.css
+++ b/start-process/start-process.css
@@ -1,51 +1,134 @@
-html, body, .container {
-    height:100%;
+/*html {
+  display:table;
+}
+body {
+  display:table-cell;
+  vertical-align:middle;
+}
+body > .btn {
+  display: block;
+  margin: 0 auto;
+}
+*/
+
+.myborder{
+  border: 1px solid black;
 }
 
-.row {
-    height: 100%;
-    display: table-row;
+html,
+body {
+  width:100%;
+  height:100%;
 }
 
-.col-md-1{
-  background-color: red;
+.nomargin{
+	margin: 0 !important;
 }
 
-.vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+
+.modal-header{
+  padding: 0px;
 }
 
-.panel-heading h3 {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    line-height: normal;
-    width: 75%;
-    padding-top: 8px;
+.container-fluid{
+  margin: 5px;
 }
 
-.dropdown-menu {
-  left: 50%;
-  right: auto;
-  text-align: center;
-  transform: translate(-50%, 0);
+.modal-body{
+  padding: 10px
 }
 
-.btn{
-  border:0px solid transparent; /* this was 1px earlier */
+/* .modal-fullscreen */
+
+.modal-fullscreen {
+  background: transparent;
+}
+.modal-fullscreen .modal-content {
+  /*background: transparent;*/
+  border: 0;
+  opacity: 0.85;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.modal-backdrop.modal-backdrop-fullscreen {
+  background: #ffffff;
+}
+.modal-backdrop.modal-backdrop-fullscreen.in {
+  opacity: .97;
+  filter: alpha(opacity=97);
 }
 
-.carousel-inner img {
-  margin: auto;
+/* .modal-fullscreen size: we use Bootstrap media query breakpoints */
+
+.modal-fullscreen{
+  margin: 0;
+  width: 100%;
 }
 
-.carousel-indicators li {
-  background-color: #999;
-  background-color: rgba(70,70,70,.25);
+.modal-dialog {
+  min-width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.carousel-indicators .active {
-  background-color: #444;
+.modal-content {
+  height: auto;
+  min-height: 100%;
+  border-radius: 0;
+}
+
+@media (min-width: 768px) {
+  .modal-fullscreen .modal-dialog {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .modal-fullscreen .modal-dialog {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .modal-fullscreen .modal-dialog {
+     width: 1170px;
+  }
+}
+
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
+.full-width-height{
+  width: 100% !important;
+  height:100% !important;
+}
+.my-row{
+  width: 100%;
+  height:100%;
+}
+
+.my-col {
+  width: 100%;
+  height:100%;
+}
+
+.img-fluid{
+  max-height: 25px;
+  width: auto;
+}
+
+.my-table{
+  width: 100%;
+  height:100%;
+}
+
+.my-table-cell{
+  display:table-cell;
+  vertical-align:middle;
+}
+
+.my-table-item{
+  display: block;
+  margin: 0 auto;
 }
